# This Rust library is a slightly modified version of the zkay one at https://github.com/eth-sri/zkay/tree/master/babygiant-lib 
[package]
name = "babygiant"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ff = "0.2.0"
ark-ec = "0.2.0"
ark-ed-on-bn254 = "0.2.0"
ark-std = "0.2.0"
hex = "0.4.3"
num_cpus = "1.6.1"

[profile.release]
opt-level = 3